--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build and push latest
-        if: ${{ github.ref == "refs/heads/main" }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -27,7 +27,7 @@ jobs:
           push: true
           tags: ohiosupercomputer/job-pod-reaper:latest
       - name: Build and push tag ${{ github.event.ref }}
-        if: ${{ github.ref != "refs/heads/main" }}
+        if: ${{ github.ref != 'refs/heads/main' }}
         id: docker_build
         uses: docker/build-push-action@v2
         with:
