--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build and push latest
         if: ${{ github.ref == 'refs/heads/main' }}
-        id: docker_build
+        id: docker_build_latest
         uses: docker/build-push-action@v2
         with:
           context: ./
@@ -28,7 +28,7 @@ jobs:
           tags: ohiosupercomputer/job-pod-reaper:latest
       - name: Build and push tag ${{ github.event.ref }}
         if: ${{ github.ref != 'refs/heads/main' }}
-        id: docker_build
+        id: docker_build_tag
         uses: docker/build-push-action@v2
         with:
           context: ./
@@ -36,4 +36,8 @@ jobs:
           push: true
           tags: ohiosupercomputer/job-pod-reaper:${{ github.event.ref }}
       - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        if: steps.docker_build_latest.outputs.digest
+        run: echo ${{ steps.docker_build_latest.outputs.digest }}
+      - name: Image digest
+        if: steps.docker_build_tag.outputs.digest
+        run: echo ${{ steps.docker_build_tag.outputs.digest }}
