Deploy by default with info logging

--- a/install/deployment.yaml
+++ b/install/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - --reap-namespaces=all
         - --reap-timestamp=start
         - --job-label=job
-        - --log-level=debug
+        - --log-level=info
         - --log-format=logfmt
         securityContext:
           allowPrivilegeEscalation: false
