--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
         with:
           version: v1.29
       - name: Run tests
-        run: make test
+        run: make all
       - name: Run coverage
         run: make coverage
       - name: Upload coverage to Codecov
