--- a/.github/workflows/release_docker.yaml
+++ b/.github/workflows/release_docker.yaml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Release Docker
     steps:
-      - name: Set tag
-        id: tag
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - name: Set version
+        id: version
+        run: echo ::set-output name=version::${GITHUB_REF#refs/*/}
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
@@ -32,18 +32,22 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ohiosupercomputer/job-pod-reaper:latest
-      - name: Build and push tag ${{ steps.tag.outputs.tag }}
+          build-args: |
+            VERSION=main
+      - name: Build and push version ${{ steps.version.outputs.version }}
         if: ${{ github.ref != 'refs/heads/main' }}
-        id: docker_build_tag
+        id: docker_build_version
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ohiosupercomputer/job-pod-reaper:${{ steps.tag.outputs.tag }}
+          tags: ohiosupercomputer/job-pod-reaper:${{ steps.version.outputs.version }}
+          build-args: |
+            VERSION=${{ steps.version.outputs.version }}
       - name: Image digest
         if: steps.docker_build_latest.outputs.digest
         run: echo ${{ steps.docker_build_latest.outputs.digest }}
       - name: Image digest
-        if: steps.docker_build_tag.outputs.digest
-        run: echo ${{ steps.docker_build_tag.outputs.digest }}
+        if: steps.docker_build_version.outputs.digest
+        run: echo ${{ steps.docker_build_version.outputs.digest }}
