--- a/install/deployment.yaml
+++ b/install/deployment.yaml
@@ -23,8 +23,12 @@ spec:
         - --reap-interval=60s
         - --reap-namespaces=all
         - --job-label=job
+        - --listen-address=:8080
         - --log-level=info
         - --log-format=logfmt
+        ports:
+        - containerPort: 8080
+          name: http
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -42,3 +46,19 @@ spec:
             memory: 50Mi
       nodeSelector:
         kubernetes.io/os: linux
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: job-pod-reaper
+  namespace: job-pod-reaper
+  labels:
+    app.kubernetes.io/name: job-pod-reaper
+spec:
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 8080
+    targetPort: http
+  selector:
+    app.kubernetes.io/name: job-pod-reaper
