--- a/install/namespace-rbac.yaml
+++ b/install/namespace-rbac.yaml
@@ -3,19 +3,23 @@ kind: Namespace
 metadata:
   name: job-pod-reaper
   labels:
-    name: job-pod-reaper
+    app.kubernetes.io/name: job-pod-reaper
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: job-pod-reaper
   namespace: job-pod-reaper
+  labels:
+    app.kubernetes.io/name: job-pod-reaper
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: job-pod-reaper
   namespace: job-pod-reaper
+  labels:
+    app.kubernetes.io/name: job-pod-reaper
 rules:
 - apiGroups:
   - ""
@@ -33,6 +37,8 @@ kind: ClusterRole
 metadata:
   name: job-pod-reaper-list-namespaces
   namespace: job-pod-reaper
+  labels:
+    app.kubernetes.io/name: job-pod-reaper
 rules:
 - apiGroups:
   - ""
@@ -46,6 +52,8 @@ kind: ClusterRoleBinding
 metadata:
   name: job-pod-reaper-list-namespaces
   namespace: job-pod-reaper
+  labels:
+    app.kubernetes.io/name: job-pod-reaper
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
