--- a/install/deployment.yaml
+++ b/install/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         image: docker.io/ohiosupercomputer/job-pod-reaper:latest
         imagePullPolicy: Always
         args:
+        - /job-pod-reaper
         - --reap-max=30
         - --reap-interval=60s
         - --reap-namespaces=all
