--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.15'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
@@ -56,8 +58,15 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: false
-          tags: ohiosupercomputer/job-pod-reaper:latest
+          tags: job-pod-reaper:latest
+          outputs: type=docker,dest=/tmp/job-pod-reaper.tar
+      - name: Upload Docker image
+        uses: actions/upload-artifact@v2
+        with:
+          name: image
+          path: /tmp/job-pod-reaper.tar
   test-helm:
+    needs: [build]
     runs-on: ubuntu-latest
     name: Test Helm Chart
     steps:
@@ -74,6 +83,11 @@ jobs:
           python-version: 3.7
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.0.1
+      - name: Download image
+        uses: actions/download-artifact@v2
+        with:
+          name: image
+          path: /tmp
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
@@ -86,16 +100,12 @@ jobs:
       - name: Create kind cluster
         uses: container-tools/kind-action@v1
         if: steps.list-changed.outputs.changed == 'true'
-      - name: Build
-        uses: docker/build-push-action@v2
+      - name: Load image
         if: steps.list-changed.outputs.changed == 'true'
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: kind-registry:5000/job-pod-reaper:latest
-          build-args: |
-            VERSION=latest
+        run: |
+          docker load --input /tmp/job-pod-reaper.tar
+          docker tag job-pod-reaper:latest kind-registry:5000/job-pod-reaper:latest
+          docker push kind-registry:5000/job-pod-reaper:latest
       - name: Update chart values
         if: steps.list-changed.outputs.changed == 'true'
         run: |
